feat(gateway): finish metric controller
